# bodhi-profile-iso

./: README.md  meson.build  meson_options.txt
data/: meson.build
data/bodhi/: meson.build
data/bodhi/desktop/: bodhi-help.desktop  meson.build  ubiquity.desktop
data/bodhi/distro/: meson.build  startupcommands
data/icons/hicolor/: meson.build
data/icons/hicolor/96x96/apps/: meson.build
data/lightdm/: meson.build
data/lightdm/lightdm.conf.d/: meson.build
debian/: changelog  conffiles  control  copyright  rules
etc/: meson.build
etc/bodhi/: meson.build
src/: eet_cfg.sh  meson.build
src/ISO/: e.src  e.src.bl6  meson.build  module.fileman.src  module.ibar.src  profile.desktop
